0027475: Incomplete direction for Powell method in math_GlobOptMin

Directions are changed to be valid orthogonal set.